Fix modal not closing on confirm

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ANET</title>
-</head>
-<body>
-  <div id="root"></div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ANET</title>
+    <!-- Favicons -->
+    <!-- 128x128 -->
+    <link
+      rel="shortcut icon"
+      type="image/ico"
+      href="/favicon/favicon.ico"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/favicon/favicon.png"
+    />
+    <!-- 192x192, as recommended for Android -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/favicon/favicon-192.png"
+    />
+    <!-- 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
+    <link
+      rel="apple-touch-icon-precomposed"
+      href="/favicon/favicon-57.png"
+    />
+    <!-- 72x72 (precomposed) for 1st generation iPad, iPad 2 and iPad mini -->
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="72x72"
+      href="/favicon/favicon-72.png"
+    />
+    <!-- 114x114 (precomposed) for iPhone 4, 4S, 5 and post-2011 iPod Touch -->
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="114x114"
+      href="/favicon/favicon-114.png"
+    />
+    <!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="144x144"
+      href="/favicon/favicon-144.png"
+    />
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
