Change imports to relative
Extract some logic into custom hooks

Add loading component

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,16 +6,8 @@
     <title>ANET</title>
     <!-- Favicons -->
     <!-- 128x128 -->
-    <link
-      rel="shortcut icon"
-      type="image/ico"
-      href="/favicon/favicon.ico"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="/favicon/favicon.png"
-    />
+    <link rel="shortcut icon" type="image/ico" href="/favicon/favicon.ico" />
+    <link rel="icon" type="image/png" href="/favicon/favicon.png" />
     <!-- 192x192, as recommended for Android -->
     <link
       rel="icon"
@@ -24,10 +16,7 @@
       href="/favicon/favicon-192.png"
     />
     <!-- 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
-    <link
-      rel="apple-touch-icon-precomposed"
-      href="/favicon/favicon-57.png"
-    />
+    <link rel="apple-touch-icon-precomposed" href="/favicon/favicon-57.png" />
     <!-- 72x72 (precomposed) for 1st generation iPad, iPad 2 and iPad mini -->
     <link
       rel="apple-touch-icon-precomposed"
